Fixing Header being cut off

--- a/site-lib/styles/theme.css
+++ b/site-lib/styles/theme.css
@@ -68,6 +68,7 @@ body{
   margin-bottom: 0.25em;
   border-bottom: 1px solid var(--background-modifier-border);
   line-height: 1.3;
+  word-break: normal;
   max-width: 32%; /* KE BARTLET - Look here for the width of the bar below headers */
 }
 .HyperMD-header-1 {
